<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_app"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/gray"
            android:textSize="18dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/gray"
            android:textSize="18dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:inputType="text|textPassword"
            android:maxLines="1"/>

        <Button
            android:id="@+id/signInButton"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue_rounded"
            android:layout_gravity="center"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:onClick="onSignInButtonClicked"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/blue"
            android:textStyle="italic"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:onClick="onForgotButtonClicked"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/gray"
            android:textSize="16dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/blue"
            android:textStyle="italic"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_marginBottom="60dp"
            android:onClick="onSignUpButtonClicked"/>
    </LinearLayout>
</LinearLayout>