<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/gray">

                <Button
                    android:id="@+id/detailsButton"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/arrow_back"
                    android:textSize="20sp"
                    android:textColor="@color/blue"
                    android:background="@null"
                    android:textStyle="bold"
                    android:onClick="onDetailsButtonClicked"/>

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/logo"
                    android:background="@null"
                    android:layout_margin="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/details"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:layout_marginLeft="4dp"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/infoButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="right"
            android:background="@null"
            android:src="@drawable/info"
            android:scaleType="centerInside"
            android:layout_margin="8dp"/>

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_short_name"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="@color/gray"
            android:textSize="16dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/developed"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/premiumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_blue_rounded"
        android:layout_gravity="center"
        android:text="@string/upgrade_to_premium"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginBottom="40dp"
        android:onClick="onPremiumButtonClicked"/>
</LinearLayout>

