<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_wide"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_margin="4dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blue"
        android:layout_margin="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp"
        android:background="@color/design_default_color_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="start">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                android:text="@string/english"
                android:textColor="@color/black"
                android:textSize="18dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:id="@+id/englishLanguageButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/circle_unchecked"
                android:background="@null"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp"
        android:background="@color/design_default_color_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="start">
=
            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                android:text="@string/ukrainian"
                android:textColor="@color/black"
                android:textSize="18dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:id="@+id/ukrainianLanguageButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/circle_unchecked"
                android:background="@null"/>
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/cancelLanguageButton"
        android:layout_height="32dp"
        android:layout_width="match_parent"
        android:layout_margin="4dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@color/design_default_color_background"/>
</LinearLayout>