<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/editCategoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_category"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_margin="4dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blue"
        android:layout_margin="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="4dp">

        <EditText
            android:id="@+id/editCategoryNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:inputType="text"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/acceptCategoryChange"
            android:layout_height="32dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/accept"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:background="@color/design_default_color_background"/>

        <Button
            android:id="@+id/cancelCategoryChange"
            android:layout_height="32dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:background="@color/design_default_color_background"/>
    </LinearLayout>
</LinearLayout>